# distributed-job-system-rs

./: Cargo.toml  Makefile  README.md  docker-compose.yml  operations-error.txt  operations-single.txt  operations.txt
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  static-analysis-docker.yml  static-analysis-rust.yml
services/client-application/: Cargo.toml  Dockerfile
services/client-application/src/: main.rs
services/client-application/src/application/: context.rs  mod.rs
services/client-application/src/database/: database_client.rs  job_repository.rs  mod.rs  model.rs  operation_repository.rs
services/client-application/src/domain/: job.rs  mod.rs  operation.rs
services/client-application/src/http/: fallback_controller.rs  http_server.rs  job_controller.rs  mod.rs  model.rs  operation_controller.rs  utils.rs
services/client-application/src/messaging/: consumer.rs  mod.rs  model.rs  producer.rs
services/common/: Cargo.toml
services/common/src/: lib.rs
services/common/src/application/: mod.rs  opentelemetry.rs
services/common/src/http/: fallback_controller.rs  health_check.rs  http_server.rs  mod.rs  model.rs
services/common/src/messaging/: consumer.rs  mod.rs  opentelemetry.rs  producer.rs
services/kafka/config/: server-1.properties  server-2.properties  server-3.properties
services/mongo/config/: mongod-secondary.conf
services/prometheus/config/: prometheus.yml
services/server-application/: Cargo.toml  Dockerfile
services/server-application/src/: main.rs
services/server-application/src/application/: context.rs  mod.rs  opentelemetry.rs
services/server-application/src/domain/: operation.rs
services/server-application/src/http/: health_check.rs  http_server.rs  mod.rs  model.rs
services/server-application/src/messaging/: consumer.rs  mod.rs  model.rs  producer.rs
