[workspace.package]
authors = ["Jérémy Audiger"]
edition = "2024"
rust-version = "1.91"

[workspace]
members = [
    "services/client-application",
    "services/server-application",
]
resolver = "3"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["macros"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = [
    "logs",
    "metrics",
    "trace",
    "http-proto",
    "gzip-http",
    "reqwest-blocking-client",
] }
opentelemetry-resource-detectors = "0.10.0"
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["logs", "metrics", "trace", "rt-tokio"] }
rdkafka = { version = "0.38.0", default-features = false, features = ["tokio", "zstd", "tracing"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "net", "tracing"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
lto = true
opt-level = 2
panic = "abort"
strip = "debuginfo"
