[package]
name = "client-application"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
common = { path = "../common" }
futures.workspace = true
mongodb = { version = "3.5.2", features = ["opentelemetry", "tracing-unstable"] }
opentelemetry.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[lints]
workspace = true
